# advanced-multi-robot-sar

./: LICENSE  README.md
Yolov8_ros/: README.md
kilobots2_urdf/: CMakeLists.txt  package.xml
kilobots2_urdf/config/: joint_names_kilobots2_urdf.yaml
kilobots2_urdf/launch/: display.launch  gazebo.launch
kilobots2_urdf/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  base_link.STL
kilobots2_urdf/urdf/: mbot.xacro
multi_bot_gazebo/: CMakeLists.txt  package.xml
multi_bot_gazebo/launch/: multi_robot_gazebo.launch  single_robot_gazebo.launch
multi_bot_gazebo/scripts/: odom_pub.py  odom_pub_single.py
multi_bot_gazebo/worlds/: ruin.world
multi_bot_navigation/: CMakeLists.txt  package.xml
multi_bot_navigation/config/: costmap_params.yaml  costmap_params2.yaml  costmap_params3.yaml  teb_local_planner_params.yaml
multi_bot_navigation/launch/: map_merge.launch  multi_amcl.launch  multi_move_base.launch  multi_move_base2.launch  multi_move_base3.launch  multi_navigation.launch  multi_slam.launch
multi_bot_navigation/maps/: ruin.pgm  ruin.yaml
multi_bot_navigation/rviz/: multi_bot_one_map.rviz  slam.rviz
multi_bot_navigation/scripts/: map_pub.py  multi_navi.py
navigation/robot_bridge_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
navigation/robot_bridge_node/include/robot_bridge_node/: mbf_bridge_node.h
navigation/robot_bridge_node/src/: mbf_bridge_node.cpp
semantic_slam/: CMakeLists.txt  package.xml
semantic_slam/launch/: start.launch
semantic_slam/scripts/: cam_to_real.py  tf_broadcast.py  tf_listener.py
(+30 files in other folders)
